[package]
name = "code"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "hello_world",
    "vars_mut_shadow",
    "function_returns",
    "borrow_reference",
    "text_input",
    "auth",
    "login",
    "auth_enum",
    "login_enum",
    "auth_enum_data",
    "login_enum_data",
    "auth_enum_option",
    "login_enum_option",
    "auth_struct",
    "login_struct",
    "auth_vec",
    "login_vec",
    "vector_growth",
    "auth_hashmap",
    "login_hashmap",
    "hash_vec_bench",
    "hash_vec_search",
    "auth_json",
    "login_json",
    "auth_hash",
    "login_hash",
    "login_manager",
    "auth_login_manager",

    # Week 2
    "02_threads/first_thread",
    "02_threads/thread_closures",
    "02_threads/thread_return",
    "02_threads/divide_workload",
    "02_threads/scoped_threads",
    "02_threads/thread_builder",
    "02_threads/data_race",
    "02_threads/atomic_counter",
    "02_threads/atomic_counter_timed",
    "02_threads/mutex",
    "02_threads/mutex_timed",
    "02_threads/rwlock",
    "02_threads/parking",
    "02_threads/lockfree_map",
    "02_threads/deadlocks",
    "02_threads/mutex_poisoning",
    "02_threads/mpsc",
    "02_threads/mpsc_ownership",
    "02_threads/mpsc_ownership_timed",
    "02_threads/sending_functions",
    "02_threads/sending_commands_and_functions",
    "02_threads/work_queue",
    "02_threads/thread_affinity",
    "02_threads/thread_priorities",
    "02_threads/rayon_par_iter",
    "02_threads/rayon_scopes",
    "02_threads/rayon_nested_pools",
    "02_threads/rayon_broadcast",
    "02_threads/rayon_join",
]