[package]
name = "code"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "hello_world",
    "vars_mut_shadow",
    "function_returns",
    "borrow_reference",
    "text_input",
    "auth",
    "login",
    "auth_enum",
    "login_enum",
    "auth_enum_data",
    "login_enum_data",
    "auth_enum_option",
    "login_enum_option",
    "auth_struct",
    "login_struct",
    "auth_vec",
    "login_vec",
    "vector_growth",
    "auth_hashmap",
    "login_hashmap",
    "hash_vec_bench",
    "hash_vec_search",
    "auth_json",
    "login_json",
    "auth_hash",
    "login_hash",
    "login_manager",
    "auth_login_manager",

    # Week 2
    "02_threads/first_thread",
    "02_threads/thread_closures",
    "02_threads/thread_return",
    "02_threads/divide_workload",
    "02_threads/scoped_threads",
    "02_threads/thread_builder",
    "02_threads/data_race",
    "02_threads/atomic_counter",
    "02_threads/atomic_counter_timed",
    "02_threads/mutex",
    "02_threads/mutex_timed",
    "02_threads/rwlock",
    "02_threads/parking",
    "02_threads/lockfree_map",
    "02_threads/deadlocks",
    "02_threads/mutex_poisoning",
    "02_threads/mpsc",
    "02_threads/mpsc_ownership",
    "02_threads/mpsc_ownership_timed",
    "02_threads/sending_functions",
    "02_threads/sending_commands_and_functions",
    "02_threads/work_queue",
    "02_threads/thread_affinity",
    "02_threads/thread_priorities",
    "02_threads/rayon_par_iter",
    "02_threads/rayon_scopes",
    "02_threads/rayon_nested_pools",
    "02_threads/rayon_broadcast",
    "02_threads/rayon_join",

    # Week 3
    "03_async/hello_async_futures",
    "03_async/hello_async_spawn_futures",
    "03_async/tokio_single_thread_manual",
    "03_async/tokio_single_thread_macro",
    "03_async/tokio_mt_manual",
    "03_async/tokio_mt_macro",
    "03_async/tokio_await",
    "03_async/tokio_thread_sleep",
    "03_async/tokio_spawn_blocking",
    "03_async/tokio_unit_tests",
    "03_async/rust_errors1",
    "03_async/rust_errors2",
    "03_async/rust_errors3",
    "03_async/rust_errors_async",
    "03_async/buffered_reader",
    "03_async/weather",
    "03_async/tcp_echo",
    "03_async/tcp_echo_client",
    "03_async/sync_channel",
    "03_async/sync_channel_reply",
    "03_async/broadcast",
    "03_async/async_mutex",
    "03_async/select_timeout",
    "03_async/select_channels",
    "03_async/recursion",
    "03_async/pinning",
    "03_async/tokio_tracing",
    "03_async/tokio_console_demo",
    "03_async/database",
    "03_async/hello_web",
    "03_async/thumbnail_server",

    # Week 4 - Memory
    "04_mem/libc_malloc",
    "04_mem/drop_trait",
    "04_mem/smart_ptr",
    "04_mem/refcount",
    "04_mem/atomicrefcount",
    "04_mem/external_arc_mutex",
    "04_mem/internal_arc_mutex",
    "04_mem/refcell",
    "04_mem/make_trait",
    "04_mem/trait_generic",
    "04_mem/operator_overload",
    "04_mem/hashmap_bucket",
    "04_mem/iterator_generator",
    "04_mem/iterator_hashbucket",
    "04_mem/arena_bump",
    "04_mem/arena_slab",
    "04_mem/linked_list",
    "04_mem/linked_list_weak",
    "04_mem/packing",
    "04_mem/save_bytes",
    "04_mem/save_dynamic_bytes",
    "04_mem/c_rust",
    "04_mem/rust_c",
]
