[package]
name = "collector_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_v3 = { path = "../shared_v3" }
sysinfo = { version = "0.29.2", features = ["apple-app-store"] }
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
