[package]
name = "server_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
shared_v3 = { path = "../shared_v3" }
anyhow = "1.0.71"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = "1.3.3"
dotenv = "0.15.0"
axum = "0.6.18"
tokio-util = "0.7.8"
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
once_cell = "1.18.0"
