[package]
name = "shared_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3", features = ["i128"] }
crc32fast = "1.3.2"
serde = { version = "1.0.164", features = ["derive"] }
